# ai-code-collaboration-crew

./: README.md  main.py  pyproject.toml  review_local.py  review_pr.py
mock_services/: run_all.py
mock_services/gdrive_mock/: app.py
mock_services/github_mock/: app.py
mock_services/jira_mock/: app.py
mock_services/scenarios/: auth_failure.json  database_corruption.json  local_changes.json  payment_outage.json  sample_pr.json
mock_services/slack_mock/: app.py
mock_services/splunk_mock/: app.py
src/: config.py  incident_crew.py  pr_review_crew.py
src/agents/: communicator.py  detector.py  documenter.py  log_analyst.py  pr_reviewer.py  remediator.py  triage.py
src/ai_code_collaboration_crew.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/services/: client.py
src/tasks/: analyze_task.py  communicate_task.py  detect_task.py  document_task.py  pr_review_task.py  remediate_task.py  triage_task.py
src/tools/: gdrive_tool.py  github_pr_tool.py  github_tool.py  jira_tool.py  slack_tool.py  splunk_tool.py
